fixing overflow 2

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,8 +2,11 @@
 body {
   font: 'Open Sans', sans-serif;
 }
-.container {
-  padding: 0px;
+.container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
 .helpText{
   font-size: 14px;
